<resources>
    <string name="app_name">CERT Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CERT Companion</string>
    <string name="nav_header_subtitle">Simple Access to CERT Services</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome</string>

    <string name="menu_home">Home</string>
    <string name="menu_feed_index">Feeds</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_feeds">Feeds</string>
    <string name="menu_category">Categories</string>
    <string name="title_feeditem_list">FeedItems</string>
    <string name="title_feeditem_detail">FeedItem Detail</string>
    <string name="menu_label">Settings</string>
    <string name="home_button">Button</string>
    <string name="menu_reporting">Reporting</string>
</resources>
