<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_feed_index"
            android:icon="@drawable/ic_menu_feed"
            android:title="@string/menu_feeds" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_feed"
            android:title="@string/menu_category" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
