<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.ccomp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_feed"
        android:name="org.ccomp.ui.feed.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/nav_category"
        android:name="org.ccomp.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />


</navigation>